css/style.css
body {
	font-family: "Roboto", sans-serif;
	background-color: black;
	color: white;
	margin-bottom: 80px;
	overflow-y: hidden;
}

a {
	color: white;
}

.resume {
	margin-left: 25%;
}


a:hover {
	color: lightgray;
}

 a:link {
      text-decoration: none;
}

a:visited {
      text-decoration: none;
}

a:hover {
      text-decoration: none;
}

a:active {
      text-decoration: none;
}

.header {
	position: relative;
	height: 24px;
	top: 0;
}

.header-left {
	float: left
}

.header-right {
	font-size: 14px;
	float: right
}

.position {
	font-size: 12px;
}

.title {
	margin-top: 0%;
	font-size: 20px;
}

ul.nav {
	list-style: none;
}

ul.nav li {
	display: inline-block;
	padding: 10px;
}

@media screen and (max-width: 600px) {
	ul.nav li {
		display: flex;
	}
}

.projects {
	margin-left: -2.7%;
	margin-top: 60px;
}

@media screen and (max-width: 600px) {
	.projects {
		margin-left: 0%;
	}

}

.project {
	display: inline-block;
	margin-top: 2%;
	margin-bottom: 2.5%;
	margin-left: 5%;
	transition: 1s;
	animation: fade-in 0.5s ease-in;
	position: relative;
	pointer-events: all;
	transform: scale(1);
}

@media screen and (max-width: 600px) {
	.project {
		transform: scale(0.65);
	}
}

.name {
	font-weight: bold;
	display: inline;
	margin-bottom: -3%;
	margin-right: 5%;
}

.languages {
	transition: 1s;
}

.languageTag {
	font-weight: bold;
	font-size: 25px;
	display: inline;
	writing-mode: vertical-rl;
	margin-left: -3%;
	margin-right: -2%;
}

.language {
	margin-right: 3%;
	display: inline;
}

.description {
	position: absolute;
	margin-top: 0;
	display: inline-block;
	pointer-events: none;
	opacity: 0;
	transition: opacity 1s, transform 1s;
	z-index: 999;
	transform: translateY(-25px);
}


.preview {
	display: flex;
	margin-bottom: 5%;
	transition: 1s;
	z-index: 9;
}

p {
	font-size: 13px;
}

@keyframes fade-in {
	0% {
		opacity: 0;
		pointer-events: none;
	}

	100% {
		opacity: 100;
		pointer-events: all;
	}
}

@keyframes fade-out {
	0% {
		opacity: 100;
		pointer-events: all;
	}

	100% {
		opacity: 0;
		pointer-events: none;
	}
}



@keyframes scale-in {
	0% {
		transform: scale(1.1);
	}

	100% {
		transform: scale(1);
	}
}

